trunk/Archive2/40/c10c05fe92032b/output
main.cpp:5:5: error: 'destructor' does not name a type
     destructor
     ^
main.cpp: In function 'int main()':
main.cpp:49:16: warning: unused variable 'obj3' [-Wunused-variable]
         Object obj3;
                ^
main.cpp:20:12: warning: unused variable 'obj' [-Wunused-variable]
     Object obj;
            ^
main.cpp:42:9: warning: unused variable 'n' [-Wunused-variable]
     int n; // no initializer
         ^
main.cpp:43:13: warning: unused variable 't' [-Wunused-variable]
     Trivial t; // trivial ctor/dtor, no initializer
             ^
